Division of the three regions of our page

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
 </head>
 <body>
     <!-- HEADER SECTION -->
-    <header></header>
+    <header>
+        bottoni
+    </header>
     <!-- MAIN SECTION -->
-    <main></main>
+    <main>
+        sezione immagini
+    </main>
     <!-- FOOTER SECTION -->
-    <footer></footer>
-    
+    <footer>
+        sezione icone
+    </footer>
 </body>
 </html>
