--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 <body>
     <!-- HEADER SECTION -->
     <header>
-        bottoni
+        <button>
+            <i class="fas fa-th"></i>
+            Speaker View 
+        </button>
+        <button>
+            <i class="fas fa-expand-arrows-alt"></i>
+        </button>
     </header>
     <!-- MAIN SECTION -->
     <main>
