css header (button) inserction

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
     <!-- HEADER SECTION -->
     <header>
-        <button>
+        <button class="but margin-r ">
             <i class="fas fa-th"></i>
             Speaker View 
         </button>
-        <button>
+        <button class="but">
             <i class="fas fa-expand-arrows-alt"></i>
         </button>
     </header>
