--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
     </header>
     <!-- MAIN SECTION -->
     <main>
-        sezione immagini
+        <!-- images -->
+        <div class="container">
+            <div class="block">
+                <img src="https://i.picsum.photos/id/231/350/350.jpg?hmac=L5s7OxbxwBj74dYNWEqILZQzPhRWlxx6Pkfft47V4MM" alt="">
+            </div>
+
+            <div class="block">
+            </div>
+
+            <div class="block">
+            </div>
+
+            <div class="block">
+            </div>
+
+            <div class="block">
+            </div>
+        </div>
     </main>
     <!-- FOOTER SECTION -->
     <footer>
