image centering inside the block

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- images -->
         <div class="container">
             <div class="block">
-                
+               <img src="https://picsum.photos/id/909/200/300" alt=""> 
             </div>
 
             <div class="block">
