span insertion in the page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         <!-- images -->
         <div class="container">
             <div class="block">
-               <img src="https://picsum.photos/id/909/200/300" alt=""> 
+               <img src="https://picsum.photos/id/909/200/300" alt="">
+               <span>
+                <i class="fas fa-microphone-alt-slash"></i>
+                Sound of the Sea
+               </span>
             </div>
 
             <div class="block">
