span insertion in the image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="block">
                <img src="https://picsum.photos/id/909/200/300" alt="">
-               <span>
+               <span class="sound">
                 <i class="fas fa-microphone-alt-slash"></i>
                 Sound of the Sea
                </span>
@@ -48,7 +48,7 @@
 
             <div class="block">
             </div>
-        </div>
+        </div>  
     </main>
     <!-- FOOTER SECTION -->
     <footer>
