--- a/index.html
+++ b/index.html
@@ -226,7 +226,19 @@
     </main>
     <!-- FOOTER SECTION -->
     <footer>
-        sezione icone
+        <!-- SECTION A -->
+        <ul class="section-a">
+            <li class="margin">
+                <i class="icon fas fa-microphone"></i>
+                <div>Mute</div>
+            </li>
+            <li class="margin">
+                <i class="icon fas fa-video"></i>
+                <div>Mute</div>
+            </li>
+        </ul>
+        <!-- SECTION B -->
+        <!-- SECTION C -->
     </footer>
 </body>
 </html>
