insert color icon

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             </li>
             <li class="margin arrow-menu">
                 <div>
-                    <i class="icon fas fa-share-square"></i>
+                    <i class="color-share icon fas fa-share-square"></i>
                     <div>Share Screen</div>
                 </div>
                 <i class="arrow fas fa-chevron-up"></i>
