insert button footer

--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@
             
         </ul>
         <!-- SECTION C -->
-      <button>ciao</button>
+      <button class="button">
+          End Meeting
+        </button>
     </footer>
+
 </body>
 </html>
